<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/child_one"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input One"/>

    <EditText
        android:id="@+id/inputTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input Two"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>